animation done with framer motion

--- a/src/components/nav/nav.module.scss
+++ b/src/components/nav/nav.module.scss
@@ -32,6 +32,7 @@
             display:none;
           }
           li{
+            font-family: $font-secondary;
             padding-right:50px;
             transition: 800ms;
             @media (max-width:$break-point-xl) {
