--- a/src/components/contents/contents.module.scss
+++ b/src/components/contents/contents.module.scss
@@ -106,7 +106,10 @@
           }
           p:first-of-type{
             font-weight: 700;
-            font-size: 20px;
+            font-size: 17px;
+          }
+          p:nth-of-type(2){
+            font-size: 15px;
           }
         }
       }
@@ -155,7 +158,7 @@
         }
       }
       .mini_card_item{
-        width: 120px;
+        width: 125px;
         height: auto;
         border-radius:12px;
         box-shadow: 0px 40px 40px rgba(0, 0, 0, 0.24);
@@ -173,9 +176,10 @@
           color:$green;
           p:nth-of-type(1){
             font-weight:bold;
+            font-size:15px;
           }
           p:nth-of-type(2){
-            font-size:13px;
+            font-size:12px;
           }
         }
       }
@@ -192,7 +196,7 @@
       }
       .hero_text{
         color:$green;
-        margin-bottom:25vh;
+        margin-bottom:20vh;
         @media (max-width:$break-point-l) {
           margin-bottom:10px;
         }
@@ -201,6 +205,7 @@
         }
         h1{
           font-size:75px;
+          font-weight: bold;
           @media (max-width:$break-point-l) {
             margin-bottom:10px;
             font-size:50px;
@@ -215,6 +220,7 @@
     .sub_hero_text{
       margin-left:80px;
       margin-bottom:6vh;
+      margin-bottom:10vh;
       @media (max-width:$break-point-l) {
         margin-bottom:0vh;
         margin-left:0px;
