--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,13 +2,18 @@
 
 @font-face {
   font-family: 'Faible';
-  src: local('Faible'), url('../assets/fonts/Faible/Faible-Regular.otf') format('truetype');
+  src: local('Faible'), url('./assets/fonts/Faible/Faible-Regular.woff') format('woff');
 }
 
 @font-face {
   font-family: 'SpoofTrial';
-  src: local('SpoofTrial'), url('./assets/fonts/SpoofTrial/SpoofTrial-Regular.otf') format('truetype');
+  src: local('SpoofTrial'), url('./assets/fonts/SpoofTrial/SpoofTrial-Regular.otf') format('opentype');
 }
+
+// @font-face {
+//   font-family: 'SpoofTrial';
+//   src: local('SpoofTrial'), url('./assets/fonts/SpoofTrial/SpoofTrial-Regular.otf') format('truetype');
+// }
 
 
 *{
@@ -28,4 +33,8 @@ body{
 
 h1, h2, h3, h4, h5, p{
     margin:0;
+}
+
+h1{
+  font-family: $font-secondary;
 }
