--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,6 +4,7 @@
 /* === Variables === **/
 $font-primary: 'Faible';
 $font-secondary: 'SpoofTrial';
+$font-navigation: 'Cera Pro';
 $break-point-xs: 420px;
 $break-point-s: 576px;
 $break-point-md: 782px;
