--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,7 @@
 $font-primary: 'Faible';
 $font-secondary: 'SpoofTrial';
 $font-navigation: 'Cera Pro';
+$break-point-xxs: 360px;
 $break-point-xs: 420px;
 $break-point-s: 576px;
 $break-point-md: 782px;
