--- a/src/components/contents/contents.module.scss
+++ b/src/components/contents/contents.module.scss
@@ -16,22 +16,17 @@
     height: 100vh;
     align-items: center;
     justify-content: space-between; 
-    /** display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 50px;
-    grid-row-gap: 0px; **/
     @media (max-width:$break-point-l) {
       flex-direction:column-reverse;
       align-items: center;
-      justify-content: center; 
+      justify-content: flex-end;
     }
     .wiket_images_container{
       position: relative;
       //grid-area: 1 / 1 / 2 / 2;
       .svg_icons{
         position:absolute;
-        top:-12vh;
+        top:-17%;
         left:-78px;
         z-index:-1;
         .location_svg{
@@ -52,7 +47,7 @@
           img{
             width:35px;
           }
-          @media (max-width:$break-point-l) {
+          @media (max-width:$break-point-s) {
             display:none;
           }
         }
@@ -64,17 +59,25 @@
           @media (max-width:$break-point-xl) {
             left:360px;
           }
-          @media (max-width:$break-point-l) {
+          @media (max-width:$break-point-s) {
             display:none;
           }
         }
         .mobile_path_svg{
           display:none;
+          width: 100%;
           @media (max-width:$break-point-s) {
             display:block;
             position:absolute;
+            top:70vh;
+            left:130px;
+          }
+          @media (max-width:$break-point-xs) {
             top:80vh;
             left:160px;
+          }
+          @media (max-width:$break-point-xxs) {
+            top:70vh;
           }
         }
       }
@@ -121,14 +124,20 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(3, 1fr);
-      grid-column-gap: 160px;
+      grid-column-gap: 145px;
       grid-row-gap: 0px;
       @media (max-width:$break-point-l) {
        grid-column-gap: 80px;
       }
       @media (max-width:$break-point-s) {
-       top:400px;
+       top:70%;
        width:100%;
+      }
+      @media (max-width:$break-point-xs) {
+        top:80%;
+       }
+       @media (max-width:$break-point-xxs) {
+        top:70%;
       }
       .mini_card_item:nth-of-type(1){
         grid-area: 2 / 1 / 3 / 2;   
@@ -153,7 +162,7 @@
         left:30px;
          @media (max-width:$break-point-s) {
           grid-area: 1 / 1 / 2 / 2;
-          top:35vh;
+          top:160%;
           left:0px;
         }
       }
@@ -192,7 +201,7 @@
         width:100%;
         margin-left:0px;
         margin-bottom:70px;
-        margin-top:20vh;
+        margin-top:10vh;
       }
       .hero_text{
         color:$green;
@@ -218,7 +227,7 @@
       }
     }
     .sub_hero_text{
-      margin-left:80px;
+      margin-left:100px;
       margin-bottom:6vh;
       margin-bottom:10vh;
       @media (max-width:$break-point-l) {
