infinity yoyo transition added

--- a/src/components/contents/contents.module.scss
+++ b/src/components/contents/contents.module.scss
@@ -73,7 +73,7 @@
             left:130px;
           }
           @media (max-width:$break-point-xs) {
-            top:80vh;
+            top:690px;
             left:160px;
           }
           @media (max-width:$break-point-xxs) {
